@@ -5,7 +5,9 @@ obj2mesh - create a compiled RADIANCE mesh file from Wavefront .OBJ input
 .SH SYNOPSIS
 .B obj2mesh
 [
-.B "\-a matinput"
+.B "\-a matfile"
+][
+.B "\-l matlib"
 ][
 .B "\-n objlim"
 ][
@@ -30,6 +32,10 @@ which is sent to
 Any RADIANCE material descriptions included via one or more
 .I \-a
 options will be compiled and stored in the mesh as well.
+If the
+.I \-l
+option is used to specify a material file, the RADIANCE library
+locations are searched.
 This mesh may be included in a RADIANCE scene description via the
 .I mesh
 primitive, thus:
@@ -200,6 +206,8 @@ tiled_mat mesh tiled_mesh
 0
 0
 .fi
+.SH ENVIRONMENT
+RAYPATH		the directories to search for material files.
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
